--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,14 +7,15 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
-#        show_sql: true
+        show_sql: true
         format_sql: true
-
+        default_batch_fetch_size: 100
+#    open-in-view: false
 
 logging:
   level:
     org.hibernate.SQL: off
-#    org.hibernate.type: trace
+    org.hibernate.type: trace
